--- a/CollegePortal/AdminCollegePortal/pom.xml
+++ b/CollegePortal/AdminCollegePortal/pom.xml
@@ -7,10 +7,14 @@
 	<parent>
 		<groupId>com.portal.college</groupId>
 		<artifactId>CollegePortal</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
+		<dependency>
+				<groupId>postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -19,6 +23,15 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
