--- a/CollegePortal/pom.xml
+++ b/CollegePortal/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.portal.college</groupId>
 	<artifactId>CollegePortal</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>AdminCollegePortal</module>
@@ -29,8 +29,19 @@
 			</dependency>
 			<!-- Spring dependencies -->
 			<dependency>
+				<groupId>postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>9.1-901-1.jdbc4</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
 
@@ -51,6 +62,11 @@
 			</dependency>
 
 			<!-- jersey spring -->
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>3.1</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.sun.jersey</groupId>
@@ -99,6 +115,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 	<build>
